// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render areas.extra: - value[0] 1`] = `
<div
  className="ant-card ant-card-bordered"
  id="areas.extra:"
>
  <div
    className="ant-card-head"
    style="{\\"options\\":{\\"styleObjectOnly\\":true}}"
  >
    <div
      className="ant-card-head-wrapper"
    >
      <div
        className="ant-card-head-title"
      >
        <div
          className="{\\"style\\":[{\\"display\\":\\"inline-block\\"},null]}"
        />
      </div>
      <div
        className="ant-card-extra"
      >
        <div
          style={
            Object {
              "border": "1px solid red",
              "padding": 10,
            }
          }
        >
          extra
        </div>
      </div>
    </div>
  </div>
  <div
    className="ant-card-body"
    style="{\\"options\\":{\\"styleObjectOnly\\":true}}"
  >
    <div
      style={
        Object {
          "border": "1px solid red",
          "padding": 10,
        }
      }
    >
      content
    </div>
  </div>
</div>
`;

exports[`Render default - value[0] 1`] = `
<div
  className="ant-card ant-card-bordered"
  id="default"
>
  <div
    className="ant-card-head"
    style="{\\"options\\":{\\"styleObjectOnly\\":true}}"
  >
    <div
      className="ant-card-head-wrapper"
    >
      <div
        className="ant-card-head-title"
      >
        <div
          className="{\\"style\\":[{\\"display\\":\\"inline-block\\"},null]}"
        />
      </div>
    </div>
  </div>
  <div
    className="ant-card-body"
    style="{\\"options\\":{\\"styleObjectOnly\\":true}}"
  >
    <div
      style={
        Object {
          "border": "1px solid red",
          "padding": 10,
        }
      }
    >
      content
    </div>
  </div>
</div>
`;

exports[`Render properties.bodyStyle: border: 5px solid blue - value[0] 1`] = `
<div
  className="ant-card ant-card-bordered"
  id="properties.bodyStyle: border: 5px solid blue"
>
  <div
    className="ant-card-head"
    style="{\\"options\\":{\\"styleObjectOnly\\":true}}"
  >
    <div
      className="ant-card-head-wrapper"
    >
      <div
        className="ant-card-head-title"
      >
        <div
          className="{\\"style\\":[{\\"display\\":\\"inline-block\\"},null]}"
        />
      </div>
    </div>
  </div>
  <div
    className="ant-card-body"
    style="{\\"style\\":{\\"border\\":\\"5px solid blue\\"},\\"options\\":{\\"styleObjectOnly\\":true}}"
  >
    <div
      style={
        Object {
          "border": "1px solid red",
          "padding": 10,
        }
      }
    >
      content
    </div>
  </div>
</div>
`;

exports[`Render properties.bordered: false - value[0] 1`] = `
<div
  className="ant-card"
  id="properties.bordered: false"
>
  <div
    className="ant-card-head"
    style="{\\"options\\":{\\"styleObjectOnly\\":true}}"
  >
    <div
      className="ant-card-head-wrapper"
    >
      <div
        className="ant-card-head-title"
      >
        <div
          className="{\\"style\\":[{\\"display\\":\\"inline-block\\"},null]}"
        />
      </div>
    </div>
  </div>
  <div
    className="ant-card-body"
    style="{\\"options\\":{\\"styleObjectOnly\\":true}}"
  >
    <div
      style={
        Object {
          "border": "1px solid red",
          "padding": 10,
        }
      }
    >
      content
    </div>
  </div>
</div>
`;

exports[`Render properties.headerStyle: border: 5px solid blue - value[0] 1`] = `
<div
  className="ant-card ant-card-bordered"
  id="properties.headerStyle: border: 5px solid blue"
>
  <div
    className="ant-card-head"
    style="{\\"style\\":{\\"border\\":\\"5px solid blue\\"},\\"options\\":{\\"styleObjectOnly\\":true}}"
  >
    <div
      className="ant-card-head-wrapper"
    >
      <div
        className="ant-card-head-title"
      >
        <div
          className="{\\"style\\":[{\\"display\\":\\"inline-block\\"},null]}"
        />
      </div>
    </div>
  </div>
  <div
    className="ant-card-body"
    style="{\\"options\\":{\\"styleObjectOnly\\":true}}"
  >
    <div
      style={
        Object {
          "border": "1px solid red",
          "padding": 10,
        }
      }
    >
      content
    </div>
  </div>
</div>
`;

exports[`Render properties.hoverable: true - value[0] 1`] = `
<div
  className="ant-card ant-card-bordered ant-card-hoverable"
  id="properties.hoverable: true"
>
  <div
    className="ant-card-head"
    style="{\\"options\\":{\\"styleObjectOnly\\":true}}"
  >
    <div
      className="ant-card-head-wrapper"
    >
      <div
        className="ant-card-head-title"
      >
        <div
          className="{\\"style\\":[{\\"display\\":\\"inline-block\\"},null]}"
        />
      </div>
    </div>
  </div>
  <div
    className="ant-card-body"
    style="{\\"options\\":{\\"styleObjectOnly\\":true}}"
  >
    <div
      style={
        Object {
          "border": "1px solid red",
          "padding": 10,
        }
      }
    >
      content
    </div>
  </div>
</div>
`;

exports[`Render properties.inner: true - value[0] 1`] = `
<div
  className="ant-card ant-card-bordered ant-card-type-inner"
  id="properties.inner: true"
>
  <div
    className="ant-card-head"
    style="{\\"options\\":{\\"styleObjectOnly\\":true}}"
  >
    <div
      className="ant-card-head-wrapper"
    >
      <div
        className="ant-card-head-title"
      >
        <div
          className="{\\"style\\":[{\\"display\\":\\"inline-block\\"},null]}"
        />
      </div>
    </div>
  </div>
  <div
    className="ant-card-body"
    style="{\\"options\\":{\\"styleObjectOnly\\":true}}"
  >
    <div
      style={
        Object {
          "border": "1px solid red",
          "padding": 10,
        }
      }
    >
      content
    </div>
  </div>
</div>
`;

exports[`Render properties.size: small - value[0] 1`] = `
<div
  className="ant-card ant-card-bordered ant-card-small"
  id="properties.size: small"
>
  <div
    className="ant-card-head"
    style="{\\"options\\":{\\"styleObjectOnly\\":true}}"
  >
    <div
      className="ant-card-head-wrapper"
    >
      <div
        className="ant-card-head-title"
      >
        <div
          className="{\\"style\\":[{\\"display\\":\\"inline-block\\"},null]}"
        />
      </div>
    </div>
  </div>
  <div
    className="ant-card-body"
    style="{\\"options\\":{\\"styleObjectOnly\\":true}}"
  >
    <div
      style={
        Object {
          "border": "1px solid red",
          "padding": 10,
        }
      }
    >
      content
    </div>
  </div>
</div>
`;

exports[`Render properties.title - value[0] 1`] = `
<div
  className="ant-card ant-card-bordered"
  id="properties.title"
>
  <div
    className="ant-card-head"
    style="{\\"options\\":{\\"styleObjectOnly\\":true}}"
  >
    <div
      className="ant-card-head-wrapper"
    >
      <div
        className="ant-card-head-title"
      >
        <div
          className="{\\"style\\":[{\\"display\\":\\"inline-block\\"},null]}"
        />
      </div>
    </div>
  </div>
  <div
    className="ant-card-body"
    style="{\\"options\\":{\\"styleObjectOnly\\":true}}"
  >
    <div
      style={
        Object {
          "border": "1px solid red",
          "padding": 10,
        }
      }
    >
      content
    </div>
  </div>
</div>
`;

exports[`Render with html in title - value[0] 1`] = `
<div
  className="ant-card ant-card-bordered"
  id="with html in title"
>
  <div
    className="ant-card-head"
    style="{\\"options\\":{\\"styleObjectOnly\\":true}}"
  >
    <div
      className="ant-card-head-wrapper"
    >
      <div
        className="ant-card-head-title"
      >
        <div
          className="{\\"style\\":[{\\"display\\":\\"inline-block\\"},null]}"
        />
      </div>
    </div>
  </div>
  <div
    className="ant-card-body"
    style="{\\"options\\":{\\"styleObjectOnly\\":true}}"
  >
    <div
      style={
        Object {
          "border": "1px solid red",
          "padding": 10,
        }
      }
    >
      content
    </div>
  </div>
</div>
`;

exports[`Test Schema areas.extra: 1`] = `true`;

exports[`Test Schema areas.extra: 2`] = `null`;

exports[`Test Schema default 1`] = `true`;

exports[`Test Schema default 2`] = `null`;

exports[`Test Schema properties.bodyStyle: border: 5px solid blue 1`] = `true`;

exports[`Test Schema properties.bodyStyle: border: 5px solid blue 2`] = `null`;

exports[`Test Schema properties.bordered: false 1`] = `true`;

exports[`Test Schema properties.bordered: false 2`] = `null`;

exports[`Test Schema properties.headerStyle: border: 5px solid blue 1`] = `true`;

exports[`Test Schema properties.headerStyle: border: 5px solid blue 2`] = `null`;

exports[`Test Schema properties.hoverable: true 1`] = `true`;

exports[`Test Schema properties.hoverable: true 2`] = `null`;

exports[`Test Schema properties.inner: true 1`] = `true`;

exports[`Test Schema properties.inner: true 2`] = `null`;

exports[`Test Schema properties.size: small 1`] = `true`;

exports[`Test Schema properties.size: small 2`] = `null`;

exports[`Test Schema properties.title 1`] = `true`;

exports[`Test Schema properties.title 2`] = `null`;

exports[`Test Schema with html in title 1`] = `true`;

exports[`Test Schema with html in title 2`] = `null`;
